	- changed server selection so it will filter out hosts that are
	  unresponsive. This is defined as a host with the maximum rto value.
	  This means that unbound tried the host for retries up to 120 secs.
	  The rto value will time out after host-ttl seconds from the cache.
	  This keeps such unresolvable queries from taking up resources.

26 June 2007: Wouter
	- mesh is called by worker, and iterator uses it.
	  This removes the hierarchical code.
	  QueryTargets state and Finished state are merged for iterator.
	- forwarder mode no longer sets AA bit on first reply.
	- rcode in walk_supers is not needed.

25 June 2007: Wouter
	- more mesh work.
	- error encode routine for ease.

22 June 2007: Wouter
	- removed unused _node iterator value from rbtree_t. Takes up space.
	- iterator can handle querytargets state without a delegation point
	  set, so that a priming(stub) subquery error can be handled.
	- iterator stores if it is priming or not.
	- log_query_info() neater logging.
	- changed iterator so that it does not alter module_qstate.qinfo
	  but keeps a chase query info. Also query_flags are not altered,
	  the iterator uses chase_flags.
	- fixup crash in case no ports for the family exist.

21 June 2007: Wouter
	- Fixup secondary buffer in case of error callback.
	- cleanup slumber list of runnable states.
	- module_subreq_depth fails to work in slumber list.
	- fixup query release for cached results to sub targets.
	- neater error for tcp connection failure, shows addr in verbose.
	- rbtree_init so that it can be used with preallocated memory.

20 June 2007: Wouter
	- new -C option to enable coredumps after forking away.
	- doc update.
	- fixup CNAME generation by scrubber, and memory allocation of it.
	- fixup deletion of serviced queries when all callbacks delete too.
	- set num target queries to 0 when you move them to slumber list.
	- typo in check caused subquery errors to be ignored, fixed.
	- make lint happy about rlim_t.